
 Version 0.4.2
 Changed:
  AbstractLieGroup constructors now accept strings as well as string literals 
  LieGroup::canonical_print returns reference to ostream
  ParseDifferentialForms now accepts letters a-z and A-Z for dimensions up to 61, and throws ParseError on out-of-bounds errors.
  Named constructor idiom is now used in PseudoRiemannianStructureByMatrix to prevent ambiguity  
  Updated to GiNaC 1.8.4  
Added:
  Function derivations
  PseudoRiemannianStructureByOrthogonalFrame for diagonal metrics
  Spinor support for PseudoRiemannianStructureByOrthogonalFrame and PseudoRiemannianStructureByOrthonormalFrame 
  
Version 0.4.3
Fixed:
 Manifold::Check_ddZero now uses NormalForm and NormalizeRoots, to avoid throwing when coefficients simplify to zero
 Parameters::DeclareZero  uses normal and NormalizeRoots,  to avoid throwing when coefficients simplify to zero
 AbstractLieGroup accepts expressions using commas inside [].
Added:
  lie_group_to_string, function converting a lie group to a string in "Salamon notation"
  Convenience function horizontal, which can be used to print out vectors as a horizontal comma-separated list rather than one entry per line
  Function equations_such_that_linear_map_is_derivation to test whether a given element of gl is a derivation of a Lie algebra
  Added copy operator to Has_dTable
  Parameter CliffordConvention in the constructor of class PseudoRiemannianStructureByOrthonormalFrame, to allow for two different conventions in Clifford multiplication resulting in the action of the volume form acting with different powers of I
 Updated:
  CMake 3.5 required
  Added LieGroupHasParameters<true>::ReplaceIn_dTable to directly update the dTable of a Lie group with parameters, without trying to solve linear equations in the parameters.
  Added class LieGroupFamily to represent a family of Lie groups depending on parameters, where the Jacobi equation is not required to ohold for all values of the parameters.